--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           <ul class="features-list">
             <li class="features-list-item">
               <div class="icons-features">
-                <svg class="icon" width="60" height="64">
-                  <use href="images/symbol-defs.svg#icon-Group"></use>
+                <svg class="icon" width="64" height="64">
+                  <use href="images/icons.svg#icon-Group"></use>
                 </svg>
               </div>
               <h3 class="features-descr">Strategy</h3>
@@ -72,8 +72,8 @@
             </li>
             <li class="features-list-item">
               <div class="icons-features">
-                <svg class="icon" width="60" height="64">
-                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="features-descr">Punctuality</h3>
@@ -84,8 +84,8 @@
             </li>
             <li class="features-list-item">
               <div class="icons-features">
-                <svg class="icon" width="60" height="64">
-                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
 
@@ -97,8 +97,8 @@
             </li>
             <li class="features-list-item">
               <div class="icons-features">
-                <svg class="icon" width="60" height="64">
-                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="features-descr">Technologies</h3>
@@ -125,27 +125,25 @@
                 <p class="position">Product Designer</p>
 
                 <ul class="workers-links">
-                  <li>
+                  <li class="insta">
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
                       class="social-link"
                     >
                       <svg class="icon-soc" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="twitter">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="face-b">
                     <a href="" target="_blank" class="social-link"
                       ><svg
                         class="icon-soc"
@@ -153,18 +151,14 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="linkedin">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -181,27 +175,25 @@
                 <h3 class="workers">Tom Ford</h3>
                 <p class="position">Frontend Developer</p>
                 <ul class="workers-links">
-                  <li>
+                  <li class="insta">
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
                       class="social-link"
                     >
                       <svg class="icon-soc" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="twitter">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="face-b">
                     <a href="" target="_blank" class="social-link"
                       ><svg
                         class="icon-soc"
@@ -209,18 +201,14 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="linkedin">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -237,41 +225,35 @@
                 <h3 class="workers">Camila Garcia</h3>
                 <p class="position">Marketing</p>
                 <ul class="workers-links">
-                  <li>
+                  <li class="insta">
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
                       class="social-link"
                     >
                       <svg class="icon-soc" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="twitter">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="face-b">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="linkedin">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -288,27 +270,25 @@
                 <h3 class="workers">Daniel Wilson</h3>
                 <p class="position">UI Designer</p>
                 <ul class="workers-links">
-                  <li>
+                  <li class="insta">
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
                       class="social-link"
                     >
                       <svg class="icon-soc" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="twitter">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="face-b">
                     <a href="" target="_blank" class="social-link"
                       ><svg
                         class="icon-soc"
@@ -316,18 +296,14 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="linkedin">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -495,28 +471,28 @@
                   class="footer-icon-link"
                 >
                   <svg class="icon-soc" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="" target="_blank" class="footer-icon-link"
                   ><svg class="icon-soc" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="" target="_blank" class="footer-icon-link"
                   ><svg class="icon-soc" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="" target="_blank" class="footer-icon-link"
                   ><svg class="icon-soc" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
