--- a/index.html
+++ b/index.html
@@ -448,58 +448,54 @@
       </section>
     </main>
     <footer id="footer" class="footer">
-      <ul class="container foot-items">
-        <li>
-          <div class="container foot">
-            <a href="./index.html" class="foot-link"
-              >Web<span class="foot-logo">Studio</span></a
+      <div class="container foot-items">
+        <div class=" foot">
+          <a href="./index.html" class="foot-link"
+            >Web<span class="foot-logo">Studio</span></a
+          >
+          <p class="increase">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="social-media-links">
+          <p class="text-sm">Social media</p>
+          <ul class="sm-links">
+          <li>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="footer-icon-link"
             >
-            <p class="increase">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </div>
-        </li>
-        <li>
-          <div class="social-media-links">
-            <h3 class="text-sm">Social media</h3>
-            <ul class="sm-links">
-              <li>
-                <a
-                  href="https://www.instagram.com/"
-                  target="_blank"
-                  class="footer-icon-link"
-                >
-                  <svg class="icon-soc" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" target="_blank" class="footer-icon-link"
-                  ><svg class="icon-soc" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" target="_blank" class="footer-icon-link"
-                  ><svg class="icon-soc" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" target="_blank" class="footer-icon-link"
-                  ><svg class="icon-soc" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </li>
-      </ul>
+              <svg class="icon-soc" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank" class="footer-icon-link"
+              ><svg class="icon-soc" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank" class="footer-icon-link"
+              ><svg class="icon-soc" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank" class="footer-icon-link"
+              ><svg class="icon-soc" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
