--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li class="features-list-item">
               <div class="icons-features">
                 <svg class="icon" width="64" height="64">
-                  <use href="images/icons.svg#icon-Group"></use>
+                  <use href="images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-descr">Strategy</h3>
@@ -125,7 +125,7 @@
                 <p class="position">Product Designer</p>
 
                 <ul class="workers-links">
-                  <li class="insta">
+                  <li class="icons-sm-workers">
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
@@ -136,14 +136,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="twitter">
+                  <li class="icons-sm-workers">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="face-b">
+                  <li class="icons-sm-workers">
                     <a href="" target="_blank" class="social-link"
                       ><svg
                         class="icon-soc"
@@ -155,7 +155,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="linkedin">
+                  <li class="icons-sm-workers">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -175,7 +175,7 @@
                 <h3 class="workers">Tom Ford</h3>
                 <p class="position">Frontend Developer</p>
                 <ul class="workers-links">
-                  <li class="insta">
+                  <li class="icons-sm-workers">
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
@@ -186,14 +186,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="twitter">
+                  <li class="icons-sm-workers">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="face-b">
+                  <li class="icons-sm-workers">
                     <a href="" target="_blank" class="social-link"
                       ><svg
                         class="icon-soc"
@@ -205,7 +205,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="linkedin">
+                  <li class="icons-sm-workers">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -225,7 +225,7 @@
                 <h3 class="workers">Camila Garcia</h3>
                 <p class="position">Marketing</p>
                 <ul class="workers-links">
-                  <li class="insta">
+                  <li class="icons-sm-workers">
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
@@ -236,21 +236,21 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="twitter">
+                  <li class="icons-sm-workers">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="face-b">
+                  <li class="icons-sm-workers">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="linkedin">
+                  <li class="icons-sm-workers">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -270,7 +270,7 @@
                 <h3 class="workers">Daniel Wilson</h3>
                 <p class="position">UI Designer</p>
                 <ul class="workers-links">
-                  <li class="insta">
+                  <li class="icons-sm-workers">
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
@@ -281,14 +281,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="twitter">
+                  <li class="icons-sm-workers">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="face-b">
+                  <li class="icons-sm-workers">
                     <a href="" target="_blank" class="social-link"
                       ><svg
                         class="icon-soc"
@@ -300,7 +300,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="linkedin">
+                  <li class="icons-sm-workers">
                     <a href="" target="_blank" class="social-link"
                       ><svg class="icon-soc" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -326,7 +326,7 @@
                 />
 
                 <div class="overlay">
-                  <p>
+                  <p class="hidden-p">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -347,7 +347,7 @@
                 />
 
                 <div class="overlay">
-                  <p>
+                  <p class="hidden-p">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -368,7 +368,7 @@
                 />
 
                 <div class="overlay">
-                  <p>
+                  <p class="hidden-p">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -389,7 +389,7 @@
                 />
 
                 <div class="overlay">
-                  <p>
+                  <p class="hidden-p">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -410,7 +410,7 @@
                 />
 
                 <div class="overlay">
-                  <p>
+                  <p class="hidden-p">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -431,7 +431,7 @@
                 />
 
                 <div class="overlay">
-                  <p>
+                  <p class="hidden-p">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -462,7 +462,7 @@
         <div class="social-media-links">
           <p class="text-sm">Social media</p>
           <ul class="sm-links">
-            <li>
+            <li class="sm-links-item">
               <a
                 href="https://www.instagram.com/"
                 target="_blank"
@@ -473,21 +473,21 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="sm-links-item">
               <a href="" target="_blank" class="footer-icon-link"
                 ><svg class="icon-soc" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="sm-links-item">
               <a href="" target="_blank" class="footer-icon-link"
                 ><svg class="icon-soc" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="sm-links-item">
               <a href="" target="_blank" class="footer-icon-link"
                 ><svg class="icon-soc" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
