--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li class="features-list-item">
               <div class="icons-features">
                 <svg class="icon" width="64" height="64">
-                  <use href="images/icons.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-descr">Strategy</h3>
@@ -325,13 +325,11 @@
                   width="360"
                 />
 
-                <div class="overlay">
-                  <p class="hidden-p">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="hidden-p">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="prod">
                 <h3 class="type-of-prod">Banking App</h3>
@@ -346,13 +344,11 @@
                   width="360"
                 />
 
-                <div class="overlay">
-                  <p class="hidden-p">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="hidden-p">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="prod">
                 <h3 class="type-of-prod">Cashless Payment</h3>
@@ -367,13 +363,11 @@
                   width="360"
                 />
 
-                <div class="overlay">
-                  <p class="hidden-p">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="hidden-p">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="prod">
                 <h3 class="type-of-prod">Meditation App</h3>
@@ -388,13 +382,11 @@
                   width="360"
                 />
 
-                <div class="overlay">
-                  <p class="hidden-p">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="hidden-p">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="prod">
                 <h3 class="type-of-prod">Taxi Service</h3>
@@ -409,13 +401,11 @@
                   width="360"
                 />
 
-                <div class="overlay">
-                  <p class="hidden-p">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="hidden-p">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="prod">
                 <h3 class="type-of-prod">Screen Illustrations</h3>
@@ -430,13 +420,11 @@
                   width="360"
                 />
 
-                <div class="overlay">
-                  <p class="hidden-p">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="hidden-p">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="prod">
                 <h3 class="type-of-prod">Online Courses</h3>
